use two-stage build to ensure reproducible